# cubesat-rs

./: README.md
cubesat/: Cargo.toml  placeholder.txt
cubesat/src/: main.rs  radio_setup.rs
cubesat/src/EPS/: EPS.rs  PDU.rs  battery.rs  consts.rs  enums.rs  solar_panel.rs
dongle-fw/: Cargo.toml
dongle-fw/consts/src/: lib.rs
dongle-fw/src/: main.rs
dongle-monitor/: Cargo.toml
dongle-monitor/src/: main.rs
ground-station/: Cargo.toml  launch-tmux-session.sh
ground-station/src/: main.rs  tasks.rs
logo/: logo.xcf
prototypes/EPS/eps-test1/: Cargo.toml
prototypes/EPS/eps-test1/src/: main.rs
prototypes/ccsds/mkspacepacket/: Cargo.toml
prototypes/ccsds/mkspacepacket-embedded/: Cargo.toml
prototypes/ccsds/mkspacepacket-embedded/.cargo/: config.toml
prototypes/ccsds/mkspacepacket-embedded/src/: main.rs
prototypes/ccsds/mkspacepacket/src/: main.rs
prototypes/ccsds/spacepackets-embedded/: Cargo.toml
prototypes/ccsds/spacepackets-embedded/src/: main.rs
prototypes/ground/ground-station/: Cargo.toml
prototypes/ground/ground-station/src/: main.rs  tasks.rs
prototypes/ground/kissthreed_test/: Cargo.toml
prototypes/ground/kissthreed_test/src/: main.rs
prototypes/ground/multi_bin_test/: Cargo.toml  launch_tmux.sh
prototypes/ground/multi_bin_test/src/: main.rs
prototypes/ground/plotters_test/: Cargo.toml
prototypes/ground/plotters_test/src/: main.rs
