[package]
authors = ["Lagunas Luca <lagunasluca@protonmail.com>"]
edition = "2024"
readme = "README.md"
name = "cubesat"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
embedded-hal = "1.0.0"
nrf52840-hal = "0.18.0"
panic-halt = "1.0.0"
defmt = { version = "1.0.1" }
rtt-target = { version = "0.6", features = ["defmt"] }
spacepackets = { version = "0.13.1", default-features = false }
grounded = "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "cubesat"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
