[package]
authors = ["Modified by Lagunas Luca <lagunasluca@protonmail.com>, based on Ferrous Systems"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "dongle-fw"
version = "0.0.0"

[dependencies]
# consts = { path = "consts" }
# defmt = "0.3.10"
# defmt-rtt = "0.4.1"
# dongle = { path = "dongle-bsp" }
# heapless = { version = "0.8.0", features = ["defmt-03"] }
# rtic = { version = "2.1.2", features = ["thumbv7-backend"] }
# rtic-monotonics = { version = "2.0.3", features = ["cortex-m-systick"] }
# usb-device = { version = "0.3.2", features = ["defmt"] }
# usbd-hid = { version = "0.8.2", features = ["defmt"] }
# usbd-serial = "0.2.2"

cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
dongle = { path = "dongle-bsp" }
nrf52840-hal = "0.16.0"
embedded-hal = "0.2.7"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
defmt = "0.3.10"