[package]
name = "spacepackets-embedded"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"
defmt = { version = "1.0.1" }
rtt-target = { version = "0.6", features = ["defmt"] }
spacepackets = { version = "0.13.1", default-features = false }

[[bin]]
name = "spacepackets-embedded"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
